# kirje

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: hello_world.py
src/: kirje.py
src/kirje/: __init__.py  kirje.py
tests/: kirje_test.py
